# my-pub-sub

./: .gitignore  LICENSE  entry.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
mypubsub/: __init__.py  __main__.py
mypubsub/modules/: __init__.py
mypubsub/modules/singleton/: singleton_base.py
tests/: test_mypubsub.py  test_singleton.py
