[tool.poetry]
name = "MyPubSub"
version = "0.1.0"
description = "A basic Python library for a Singleton Pub Sub System"
authors = ["Sahil Khanna <mail@sahilkhanna.org>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/sahilkhanna/my-pub-sub/"
homepage = "https://github.com/sahilkhanna/"
keywords = ["pubsub", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"  # specify the Python version compatible with your project

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# 
