[metadata]
name = MyPubSub
version = 0.1.0
description = A basic Python library for a Singleton Pub Sub System
author = Sahil Khanna
author_email = mail@sahilkhanna.org
license = MIT
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/sahilkhanna/my-pub-sub/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

# Define your package dependencies here
install_requires =
    # Add runtime dependencies here, e.g.:

[options.extras_require]
dev =
    pytest>=7.4.2  # Adding pytest as a development dependency
    flake8>=7.1.1

[options.packages.find]
where = .

[options.entry_points]
# Define any console scripts if your project has CLI tools
# console_scripts =
#     
